--- a/client/src/calender.css
+++ b/client/src/calender.css
@@ -1,3 +1,7 @@
+.fc-col-header-cell-cushion {
+  color: black; /* change this to your desired color */
+  font-weight: bold; /* optional */
+}
 #calendar_container {
     /* background-color: rgba(250, 192, 0, 0.48); */
     display: flex;
