--- a/client/src/calender.css
+++ b/client/src/calender.css
@@ -1,7 +1,10 @@
 .fc-col-header-cell-cushion {
-  color: black; /* change this to your desired color */
-  font-weight: bold; /* optional */
+    color: black;
+    /* change this to your desired color */
+    font-weight: bold;
+    /* optional */
 }
+
 #calendar_container {
     /* background-color: rgba(250, 192, 0, 0.48); */
     display: flex;
@@ -94,12 +97,54 @@
     display: none;
 }
 
-@media only screen and (max-width:600px) {
+/* @media only screen and (max-width:600px) {
 
     #event_box {
         z-index: 1;
-        width: 90%;
+        width: 90%; 
         top: auto;
         left: auto;
     }
+} */
+#deleteBox {
+    width: 200px;
+    height: fit-content;
+    display: none;
+    flex-direction: column;
+    background-color: rgb(84, 84, 84);
+    box-shadow: 2px 2px 5px #ffffff;
+    border-radius: 10px;
+    z-index: 1;
+    position: absolute;
+    /* top: 200px;
+    left: 100px; */
+    justify-content: space-evenly;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 10px;
+}
+
+#delE {
+    background-color: red;
+    padding: 10px 20px 10px 20px;
+    border-radius: 20px;
+
+}
+
+#delE:hover {
+    background-color: white;
+    border: red 2px solid;
+    color: red;
+}
+
+#delC {
+    background-color: greenyellow;
+    padding: 10px 20px 10px 20px;
+    border-radius: 20px;
+}
+
+#delC:hover {
+    background-color: white;
+    border: greenyellow 2px solid;
+    color: greenyellow;
 }
